--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -188,7 +188,12 @@ div.title{
     overflow: visible;
 
 }
+.login{
+    background-color:whitesmoke ;
+    color: rgb(213, 63, 63);
+    overflow: visible;
 
+}
 
 
 
